--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "detox:build:android": "detox build -c android.emu.debug",
+    "detox:test:android": "detox test -c android.emu.debug",
+    "detox:build:ios": "detox build -c ios.sim.debug",
+    "detox:test:ios": "detox test -c ios.sim.debug",
+    "release:android": "cd android && ./gradlew bundleRelease",
+    "fastlane:android:release": "cd android && fastlane release",
+    "fastlane:ios:release": "cd ios && fastlane release"
   },
   "dependencies": {
+    "@react-native-voice/voice": "^3.2.4",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
@@ -19,10 +27,13 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
+    "@testing-library/react-native": "^12.3.0",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "detox": "^20.9.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
