fix: Update CI actions to v4

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,13 @@ on:
 
 jobs:
   # JOB 1: LINT & TEST
-  # Runs on a Linux machine. Checks code quality and runs unit tests.
   test:
     name: Lint & Unit Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
@@ -27,28 +26,27 @@ jobs:
         run: npm test
 
   # JOB 2: BUILD ANDROID
-  # Runs on a Linux machine. Builds the Android Release App (AAB).
   build-android:
     name: Build Android
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '17' # React Native 0.72+ works best with Java 17
 
       - name: Install Dependencies
         run: npm install
 
-      # We decode the Keystore from a GitHub Secret (setup instructions below)
+      # Decode Keystore from GitHub Secrets
       - name: Decode Keystore
         env:
           ANDROID_KEYSTORE_B64: ${{ secrets.ANDROID_KEYSTORE_B64 }}
@@ -65,21 +63,20 @@ jobs:
           MYAPP_UPLOAD_KEY_ALIAS: my-key-alias
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: android-release.aab
           path: android/app/build/outputs/bundle/release/app-release.aab
 
   # JOB 3: BUILD iOS
-  # Runs on a virtual Mac. Installs Pods and builds the app to prove it works.
   build-ios:
     name: Build iOS
     needs: test
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
@@ -93,7 +90,6 @@ jobs:
           pod install
 
       - name: Build iOS (Debug)
-        # We build Debug for now because Release requires expensive Apple Developer Certificates
         run: |
           cd ios
           xcodebuild -workspace ProductVoiceCode.xcworkspace -scheme ProductVoiceCode -configuration Debug -sdk iphonesimulator -derivedDataPath build
