--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,12 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      # --- NEW FIX STEP START ---
+      - name: Fix Boost Checksum
+        run: |
+          # This command replaces the old checksum with the new one inside the podspec file
+          sed -i '' 's/f0397ba6e982c4450f27bf32a2a83292aba035b827a5623a14636ea583318c41/9c2f4b99bc7ddb95a8babff8ba78a4108aa0951243ea919166a7e2e279825502/g' node_modules/react-native/third-party-podspecs/boost.podspec
+      # --- NEW FIX STEP END ---
       - name: Install Pods
         run: |
           cd ios
