--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,14 +46,14 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      # Decode Keystore from GitHub Secrets
+      # Decode Keystore
       - name: Decode Keystore
         env:
           ANDROID_KEYSTORE_B64: ${{ secrets.ANDROID_KEYSTORE_B64 }}
         run: |
           echo $ANDROID_KEYSTORE_B64 | base64 -d > android/app/my-upload-key.keystore
 
-      # Build with Secrets passed as Gradle Properties (-P)
+      # Build Android Release
       - name: Build Android Release
         run: |
           cd android
@@ -86,10 +86,10 @@ jobs:
         run: npm install
 
       # --- NEW FIX STEP START ---
-      - name: Fix Boost Checksum
+      - name: Fix Boost URL
         run: |
-          # This command replaces the old checksum with the new one inside the podspec file
-          sed -i '' 's/f0397ba6e982c4450f27bf32a2a83292aba035b827a5623a14636ea583318c41/9c2f4b99bc7ddb95a8babff8ba78a4108aa0951243ea919166a7e2e279825502/g' node_modules/react-native/third-party-podspecs/boost.podspec
+          # The default Jfrog URL is broken. We switch to the reliable archives.boost.io URL.
+          sed -i '' 's|https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_76_0.tar.bz2|https://archives.boost.io/release/1.76.0/source/boost_1_76_0.tar.bz2|g' node_modules/react-native/third-party-podspecs/boost.podspec
       # --- NEW FIX STEP END ---
       - name: Install Pods
         run: |
