--- a/ios/ProductVoiceCode/Info.plist
+++ b/ios/ProductVoiceCode/Info.plist
@@ -5,7 +5,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>en</string>
     <key>CFBundleDisplayName</key>
-    <string>ProductVoiceCode</string>
+    <string>אושר עד-ברקוד</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
